@@ -29,13 +29,15 @@ filter_cache_close(struct filter_cache *cache);
 /**
  * @param source_id uniquely identifies the source; NULL means disable
  * the cache
+ * @param status a HTTP status code for filter protocols which do have
+ * one
  */
 void
 filter_cache_request(struct filter_cache *cache,
                      pool_t pool,
                      const struct resource_address *address,
                      const char *source_id,
-                     struct strmap *headers, istream_t body,
+                     http_status_t status, struct strmap *headers, istream_t body,
                      const struct http_response_handler *handler,
                      void *handler_ctx,
                      struct async_operation_ref *async_ref);
