@@ -64,6 +64,7 @@ filter_cache_request(__attr_unused struct filter_cache *cache,
                      __attr_unused pool_t pool,
                      __attr_unused const struct resource_address *address,
                      __attr_unused const char *source_id,
+                     __attr_unused http_status_t status,
                      __attr_unused struct strmap *headers,
                      __attr_unused istream_t body,
                      const struct http_response_handler *handler,
